--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SASS</title>
+    <title>Learning SASS</title>
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <header class="main__header">
+        <h1>Hello World</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+          autem dolor suscipit pariatur impedit itaque accusantium quam eius
+          minima, ut molestias ad harum accusamus nulla.
+        </p>
+        <button class="btn">Click Me</button>
+      </header>
+    </div>
   </body>
 </html>
